# envChemistry

./: .gitignore  Dockerfile  GraphQL.md  README.md  REST.md  docker-compose.yml  manage.py  pyproject.toml
envChemistry/: schema.py  settings.py  urls.py  wsgi.py
envChemistry/envChemistry/: asgi.py  settings.py  urls.py
repositories/: calc-base.md  compound-list.txt  compound.json  compound_data.py  dummies_user.py  element_data.py  elements.json  prompt
rest/: models.py  schema.py  serializers.py  urls.py  views.py
rest/graphql/: elements.py  inputs.py  schema.py
rest/migrations/: 0001_initial.py  0002_remove_element_group_remove_element_period_and_more.py  0003_compound_compoundelement.py  0004_alter_compound_status.py  0005_alter_compound_discovery_date.py  0006_compound_discovery_period.py  0007_compound_discovery_by.py  0008_element_block_element_group_element_period_and_more.py  0009_element_abundance_earth_crust_and_more.py  0010_rename_electron_egativity_element_electronegativity_and_more.py  0011_remove_element_isotopes_isotope.py
users/: urls.py
users/migrations/: 0001_initial.py
